# AI-oli

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  submit_docker.sh
backend/data/: .~lock.data.csv#  data.csv
backend/src/: figures.py  gemini.py
backend/templates/: index.html
frontend/ai-oli/: index.html  package-lock.json  package.json  vite.config.js
frontend/ai-oli/components/: Footer.jsx  Header.jsx  Home.jsx  NutrientVisualization.jsx  Upload.jsx
frontend/ai-oli/src/: App.css  App.jsx  main.jsx
